# dist_build

./: .gitignore  LICENSE  README.md  TODO.md  cert.pem  config.json  config.py  daemon.py  dist_build.py  dist_build.sh  example_daemon_config.json  example_dev_config.json  example_testing_config.json  file_utils.py  full-config.json  gen_self_signed_cert.sh  generate_dist_build_executable.sh  key.pem  ms_dist_build.cmd  pyproject.toml  requirements.txt  start_daemon.sh  start_syncer.sh  start_worker.sh  syncer.py  syncer_workqueue.py  test1-msvc.sh  test1.sh  test2-gcc.sh  test2-msvc-abs-path.sh
certs/: server.crt  server.key  server.pass.key
dist_build/: config.py  daemon.py  dist_build.py  file_utils.py  options.py  serializer.py  syncer.py  syncer_workqueue.py
docs/: Presentation1.pptx
src/: aio_server.py  config.py  daemon.py  dist_build.py  file_utils.py  options.py  profiler.py  serializer.py  setup.py  status_viewer.py  syncer.py  syncer_filesystem_observer.py  syncer_include_installer.py  syncer_workqueue.py  worker.py  worker_local_job.py
src/certs/: gen_self_signed_cert.sh  server.csr
src/templates/: index.html
tests/: hello.c
tests/cmake/: CMakeLists.txt  README.md  create_demo.cc.py  dist_build_toolchain.cmake  example_config.json  generated_aaa.h  generated_bar.h  generated_bbb.h  generated_ccc.h  generated_ddd.h  generated_foo.h  run_test.sh
tests/cmake/Demo/: CMakeLists.txt  demo.cxx  demo_a.cxx  demo_b.cxx  demo_c.cxx  demo_d.cxx
tests/cmake/Hello/: CMakeLists.txt  hello.cxx  hello.h
tests/simple/: test1-msvc.sh  test2-gcc.sh
